refactor: added min and max price for the responce
